# CFPMonitor

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  cfpmonitor.py  environment.yaml  pyproject.toml
.github/workflows/: deploy.yaml  validate.yaml
data/metadata/: areas.yaml  conferences.yaml  conferences_homepage.yaml
data/structured/aaai/: 2024.yaml  2025.yaml  2026.yaml
data/structured/aamas/: 2026.yaml
data/structured/accv/: 2024.yaml  2026.yaml
data/structured/acisp/: 2024.yaml  2025.yaml  2026.yaml
data/structured/acl/: 2024.yaml  2025.yaml  2026.yaml
data/structured/acm mm/: 2024.yaml  2025.yaml  (+1 more)
docs/: app.js  favicon-generator.html  favicon-preview.html  styles.css  styles_with_variables.css
docs/js/: cards.js  constants.js  error-handler.js  filters.js  masonry-manager.js  rules.js  state.js  utils.js
scripts/: migrate_all_data.py
src/: analyze_extraction_quality.py  verify_extraction.py
src/crawler/: __init__.py  base.py  benchmark.py  cache.py  ccfddl.py  conf.py  core.py  deduplication.py  filters.py  scoring.py  utils.py  validate.py  wikicfp.py
src/extractor/: __init__.py  extractor.py  fields.yaml  helpers.py  normalizers.py  patterns.yaml  unified_extractors.py  unified_schema.py
src/investigation/: __init__.py  test_all_unified_extractors.py  test_backward_compatibility.py  test_policy_extractors.py  validate_migration.py
src/llm_extractor/: __init__.py  client.py  config.py  config.yaml.template  extractor.py  preprocessor.py  prompt.py
src/site/: __init__.py  build.py  generate_schema.py  renderer.py
(+736 files in other folders)
